<resources>
    <string name="app_name">Filmes</string>
    <string name="mais_detalhes">Mais Detalhes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slider_dos_filmes_populares">slider dos filmes populares</string>
    <string name="sub_menu_do_slider">sub menu do slider</string>
    <string name="os_filmes_mais_populares">Os filmes mais populares</string>
    <string name="os_filmes_mais_assitidos_atualmente">Mais assitidos</string>
    <string name="melhores_avaliados">Melhores avaliados</string>
    <string name="descricao_do_filme">Descricao do filme</string>
    <string name="elenco">Elenco</string>
    <string name="filmes_parecidos">Filmes Parecidos</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="filmes_encontrados">Filmes Encontrados</string>
    <string name="title_activity_navegation_drawer">NavegationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Filmes</string>
    <string name="nav_header_subtitle">filmes.studio@filmes.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="novidades">Novidades</string>
    <string name="terror">Terror</string>
    <string name="a_o">Ação</string>
    <string name="com_dia">Comédia</string>
</resources>