<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detail_movie_cover"
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/detail_movie_vote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_vote"
            android:gravity="center"
            android:text="80"
            android:translationZ="1dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/detailMovie_img"
            android:layout_width="125dp"
            android:layout_height="175dp"
            android:layout_marginStart="24dp"
            android:scaleType="centerCrop"
            android:transitionName="sharedName"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover"
            app:srcCompat="@drawable/ic_av_background" />

        <TextView
            android:id="@+id/detail_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detailMovie_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover" />

        <TextView
            android:id="@+id/detail_movie_description"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/descricao_do_filme"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailMovie_img" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/gradient_bg"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/detail_movie_cover"
            app:layout_constraintTop_toTopOf="@+id/detail_movie_cover" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSecond"
            android:clickable="true"
            android:contentDescription="@string/mais_detalhes"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintEnd_toEndOf="@+id/detail_movie_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detail_movie_cover"
            app:srcCompat="@drawable/ic_baseline_play_arrow_24"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/text_bg_blue"
            android:padding="16dp"
            android:text="@string/elenco"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_description" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/text_bg_blue"
            android:padding="16dp"
            android:text="@string/filmes_parecidos"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_elenco" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_elenco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_similar_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>